2020-08-27 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/gbz80/Makefile.in,
	  device/lib/gbz80/crt0_rle.s: crt0_rle.s renamed to __initrleblock.s
	* src/z80/gen.c,
	  src/z80/peep.c,
	  device/lib/gbz80/__initrleblock.s:
	  Prepare to implement RFE#670 and RFE#707. Not enabled in z80/main.c,
	  because there are failed tests:
	    gcc-torture-execute-921013-1
	    gcc-torture-execute-pr83383

2020-08-27 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCval.c:
	  Fix possible bug in reorderIlist() when empty array is passed.

2020-08-27 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peeph.def:
	  New peephole rules, fixed and reenabled rule 44.

2020-08-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph.def,
	  support/regression/tests/bug-3102.c:
	  Disable some peephole rules for bug #3102.

2020-08-25 Ben Shi <powerstudio1st AT 163 DOT com>

	* sim/ucsim/app.cc:
	  Improve back compatibility with elder gcc/g++.

2020-08-24 Ben Shi <powerstudio1st AT 163 DOT com>

	* sim/ucsim/app.cc:
	  Fix unmatched right parentheses.

2020-08-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #3101.

2020-08-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Implement RFE #404.

2020-08-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Small improvements for left-shift by constant expression.

2020-08-19 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3093.c:
	  Test for bug #3093.
	* src/z80/gen.c:
	  Improve left shift, RFE #465.

2020-08-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (resultTypePropagate): Fix bug #3093

2020-08-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/p99-conformance.c: Disable another test
	  for pdk14 to avoid RAM overflow

2020-08-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3097.c:
	  Fix bug #3097.
