@@ -192,6 +192,8 @@ void ftestu(unsigned int a, unsigned int b)
 void
 testTortureExecute (void)
 {
+#if !(defined(__clang__) && __clang_major__ <= 6)
+
 #if INT_MAX == 2147483647
   ftest(0x00000000,0x80001234);
   ftest(0x00001234,0x80000000);
@@ -224,5 +226,6 @@ testTortureExecute (void)
 #endif
 
   return;
-}
 
+#endif // __clang__
+}
